add navbar and slider images

--- a/index.html
+++ b/index.html
@@ -1,15 +1,128 @@
 <!DOCTYPE html>
-<html lang= "en">
+<html lang="en">
 <head>
-  <title>charlie hotel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-<!-- Bootstrap core CSS -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-<!-- Material Design Bootstrap -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.6/css/mdb.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.4/css/mdb.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Scheherazade" rel="stylesheet">
+  <title>Document</title>
 </head>
+
 <body>
+  <!--Navbar -->
+  <nav id="topper" class="mb-1 navbar navbar-expand-lg navbar-dark bg-light">
+    <a class="navbar-brand text-warning bg-dark" href="#">MENU</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333" aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link text-dark links" href="index.html">Home
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-dark links" href="about.html">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-dark links" href="contacts.html">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-dark links" href="contacts.html">Contact</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto nav-flex-icons">
+        <li class="nav-item">
+          <a class="nav-link waves-effect waves-light">
+            <i class="fab fa-twitter bg-info"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link waves-effect waves-light">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link waves-effect waves-light">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!--/.Navbar -->
+  <!--header with slider image-->
+  <header>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <!-- Slide One - Set the background image for this slide in the line below -->
+        <div class="carousel-item active" style="background-image: url('images/lodge.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="lead">welcome to charlie lodge.</h3>
+          </div>
+        </div>
+        <!-- Slide Two - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('images/relaxation.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="lead">A place for complete Rest & Relaxation.</h3>
+          </div>
+        </div>
+        <!-- Slide Three - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('images/seminar.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="lead">Seminar & Conference Venues.</h3>
+          </div>
+        </div>
+        <div class="carousel-item" style="background-image: url('images/wedding.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="lead">perfect venue for weddings.</h3>
+          </div>
+        </div>
+        <div class="carousel-item" style="background-image: url('images/bedroom.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="lead">Accomodations.</h3>
+          </div>
+        </div>
+        <div class="carousel-item" style="background-image: url('images/welcome.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 class="lead">The warmest of welcome.</h3>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </header>
+  <!--header with slider image-->
+  <!--header with slider image-->
+<!-- Page Content -->
+<div class="container">
+  <h1>Welcome</h1>
+  <div class="row">
+    <div class="col-md-6">hhhhhhhhhhhhh</div>
+    <div class="col-md-6">yyyyyyyyyyyy</div>
+  </div>
+</div>
 </body>
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
