--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('images/relaxation.jpg')">
+        <div class="carousel-item" style="background-image: url('images/view.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3 class="lead">A place for complete Rest & Relaxation.</h3>
           </div>
@@ -117,12 +117,140 @@
   <!--header with slider image-->
 <!-- Page Content -->
 <div class="container">
-  <h1>Welcome</h1>
+  <h1 id="centerh1">Welcome</h1>
   <div class="row">
-    <div class="col-md-6">hhhhhhhhhhhhh</div>
-    <div class="col-md-6">yyyyyyyyyyyy</div>
+    <div class="col-md-6">
+      <div class="img"></div>
+    </div>
+    <div class="col-md-6">
+      <div class="info">
+        <p>Enjoy all the luxury and comfort you have come to expect from a charlie lodge in the superior Room. Designed as an ideal space for work and relaxation a like all our rooms are elegantly decorated and equipped with all the latest conveniences, All our rooms have complimentary wi-fi access and are also equipped with a working desk and flat-screen TV. We have best swimming pools there heated while cold and cold while sunny.</p>
+    </div>
+  </div>
   </div>
 </div>
+<!-- special -->
+	<div class="special">
+		<div class="container">
+			<div class="agileinfo-heading">
+				<h3>Specialities</h3>
+			</div>
+			<div class="special-top-grids">
+				<div class="w3-agile-special">
+					<div class="col-md-3 special-grids">
+						<div class="special-img">
+							<img class="img-responsive" src="images/s1.jpg" alt="">
+							<div class="captn">
+								<div class="captn-top">
+									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+								</div>
+								<div class="wthree-special-info">
+									<h4>Phasellus</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 special-grids">
+						<div class="special-img">
+							<img class="img-responsive" src="images/s2.jpg" alt="">
+							<div class="captn">
+								<div class="captn-top">
+									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+								</div>
+								<div class="wthree-special-info">
+									<h4>Accumsan</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 special-grids">
+						<div class="special-img">
+							<img class="img-responsive" src="images/s3.jpg" alt="">
+							<div class="captn">
+								<div class="captn-top">
+									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+								</div>
+								<div class="wthree-special-info">
+									<h4>Sodales</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 special-grids">
+						<div class="special-img">
+							<img class="img-responsive" src="images/s4.jpg" alt="">
+							<div class="captn">
+								<div class="captn-top">
+									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+								</div>
+								<div class="wthree-special-info">
+									<h4>Placerat</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"> </div>
+				</div>
+				<div class="w3-agile-special">
+					<div class="col-md-3 special-grids">
+						<div class="special-img">
+							<img class="img-responsive" src="images/s5.jpg" alt="">
+							<div class="captn">
+								<div class="captn-top">
+									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+								</div>
+								<div class="wthree-special-info">
+									<h4>Phasellus</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 special-grids">
+						<div class="special-img">
+							<img class="img-responsive" src="images/s6.jpg" alt="">
+							<div class="captn">
+								<div class="captn-top">
+									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+								</div>
+								<div class="wthree-special-info">
+									<h4>Accumsan</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 special-grids">
+						<div class="special-img">
+							<img class="img-responsive" src="images/s7.jpg" alt="">
+							<div class="captn">
+								<div class="captn-top">
+									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+								</div>
+								<div class="wthree-special-info">
+									<h4>Sodales</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 special-grids">
+						<div class="special-img">
+							<img class="img-responsive" src="images/s8.jpg" alt="">
+							<div class="captn">
+								<div class="captn-top">
+									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+								</div>
+								<div class="wthree-special-info">
+									<h4>Placerat</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"> </div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //special -->
+	<!---728x90--->
 </body>
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
