--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Scheherazade" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
   <title>Document</title>
+  <script>
+  wow = new WOW(
+        {
+          animateClass: 'animated',
+          offset:       100,
+          callback:     function(box) {
+            console.log("WOW: animating <" + box.tagName.toLowerCase() + ">")
+          }
+        }
+      );
+      wow.init();
+      document.getElementById('moar').onclick = function() {
+        var section = document.createElement('section');
+        section.className = 'section--purple wow fadeInDown';
+        this.parentNode.insertBefore(section, this);
+      };
+      </script>
 </head>
 
 <body>
@@ -133,32 +153,33 @@
 	<div class="special">
 		<div class="container">
 			<div class="agileinfo-heading">
-				<h3>Specialities</h3>
+				<h3 id="lobster">Specialities</h3>
 			</div>
 			<div class="special-top-grids">
 				<div class="w3-agile-special">
+          <div class="row">
 					<div class="col-md-3 special-grids">
 						<div class="special-img">
 							<img class="img-responsive" src="images/s1.jpg" alt="">
 							<div class="captn">
 								<div class="captn-top">
-									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+									<p>Baked piza</p>
 								</div>
 								<div class="wthree-special-info">
-									<h4>Phasellus</h4>
+									<h4>Pizza</h4>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 special-grids">
 						<div class="special-img">
-							<img class="img-responsive" src="images/s2.jpg" alt="">
+							<img class="img-responsive" src="images/s10.jpg" alt="">
 							<div class="captn">
 								<div class="captn-top">
-									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+									<p>Burger on wooden tray</p>
 								</div>
 								<div class="wthree-special-info">
-									<h4>Accumsan</h4>
+									<h4>Burger</h4>
 								</div>
 							</div>
 						</div>
@@ -168,10 +189,10 @@
 							<img class="img-responsive" src="images/s3.jpg" alt="">
 							<div class="captn">
 								<div class="captn-top">
-									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+									<p>pasta with sauce</p>
 								</div>
 								<div class="wthree-special-info">
-									<h4>Sodales</h4>
+									<h4>Pasta</h4>
 								</div>
 							</div>
 						</div>
@@ -181,10 +202,10 @@
 							<img class="img-responsive" src="images/s4.jpg" alt="">
 							<div class="captn">
 								<div class="captn-top">
-									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+									<p>cooked crab</p>
 								</div>
 								<div class="wthree-special-info">
-									<h4>Placerat</h4>
+									<h4>Crab</h4>
 								</div>
 							</div>
 						</div>
@@ -192,15 +213,16 @@
 					<div class="clearfix"> </div>
 				</div>
 				<div class="w3-agile-special">
+          <div class="row">
 					<div class="col-md-3 special-grids">
 						<div class="special-img">
-							<img class="img-responsive" src="images/s5.jpg" alt="">
+							<img class="img-responsive" src="images/s11.jpg" alt="">
 							<div class="captn">
 								<div class="captn-top">
-									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+									<p>Brown fish fillet</p>
 								</div>
 								<div class="wthree-special-info">
-									<h4>Phasellus</h4>
+									<h4>Fish fillet</h4>
 								</div>
 							</div>
 						</div>
@@ -210,48 +232,131 @@
 							<img class="img-responsive" src="images/s6.jpg" alt="">
 							<div class="captn">
 								<div class="captn-top">
-									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+									<p>Pile of Shrimps</p>
 								</div>
 								<div class="wthree-special-info">
-									<h4>Accumsan</h4>
+									<h4>shrimps</h4>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 special-grids">
 						<div class="special-img">
-							<img class="img-responsive" src="images/s7.jpg" alt="">
+							<img class="img-responsive" src="images/s12.jpg" alt="">
 							<div class="captn">
 								<div class="captn-top">
-									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+									<p>Grilled Meat</p>
 								</div>
 								<div class="wthree-special-info">
-									<h4>Sodales</h4>
+									<h4>Meat</h4>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 special-grids">
 						<div class="special-img">
-							<img class="img-responsive" src="images/s8.jpg" alt="">
+							<img class="img-responsive" src="images/s13.jpg" alt="">
 							<div class="captn">
 								<div class="captn-top">
-									<p>Aenean pulvinar ac enimet posuere tincidunt velit Utin tincidunt</p>
+									<p>cooked rice</p>
 								</div>
 								<div class="wthree-special-info">
-									<h4>Placerat</h4>
+									<h4>rice</h4>
 								</div>
 							</div>
 						</div>
-					</div>
+					 </div>
 					<div class="clearfix"> </div>
 				</div>
-			</div>
+       </div>
+      </div>
+		 </div>
 		</div>
 	</div>
 	<!-- //special -->
 	<!---728x90--->
+  <section>
+    <div class="container-fluid">
+    <div id="slider-animation" class="carousel slide" data-ride="carousel">
+
+  <ul class="carousel-indicators">
+  <li data-target="#slider-animation" data-slide-to="0" class="active"></li>
+  <li data-target="#slider-animation" data-slide-to="1"></li>
+  <li data-target="#slider-animation" data-slide-to="2"></li>
+</ul>
+
+<!-- The slideshow -->
+<div class="carousel-inner">
+  <div class="carousel-item active img">
+    <img src="images/s16.jpg" alt="Los Angeles">
+      <div class="text-box">
+        <h2 class="wow slideInRight cc" data-wow-duration="2s">MEETING AND EVENTS</h2>
+          <p class="wow slideInLeft cc" data-wow-duration="2s">The Resort has one of the best confering facilities in the country with four conferences rooms set in beautiful ground overlooking the ocean. </p>
+      </div>
+  </div>
+  <div class="carousel-item img">
+    <img src="images/s18.jpg" alt="New York">
+  <div class="text-box">
+    <h2 class="wow slideInRight cc" data-wow-duration="2s">GOLF</h2>
+          <p class="wow fadeInUp cc" data-wow-duration="2s">The 18-hole Championship course at 7,000 feet on the Eburu Range is both challenging and exciting.</p>
+      </div>
+  </div>
+</div>
+<!-- Left and right controls -->
+ <a class="carousel-control-prev" href="#slider-animation" data-slide="prev">
+   <span class="carousel-control-prev-icon"></span>
+ </a>
+ <a class="carousel-control-next" href="#slider-animation" data-slide="next">
+   <span class="carousel-control-next-icon"></span>
+ </a>
+</div>
+</section>
+<section class="details-card">
+    <div class="container">
+      <h3 id="head">Accomodations at Charlie lodge</h3>
+      <p id="para">All our rooms are indulgently comfortable and spacious</p>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card-content">
+                    <div class="card-img">
+                        <img src="images/s20.jpg" alt="">
+                    </div>
+                    <div class="card-desc">
+                        <h3>Garden Executive Rooms</h3>
+                        <p>Fresh, vibrant and cosy everything you need in a room surrounded by richly landscaped gardens with kingSize beds and ambient lighting.</p>
+                            <a href="#" class="btn-card">Read</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-content">
+                    <div class="card-img">
+                        <img src="images/s21.jpg" alt="">
+                    </div>
+                    <div class="card-desc">
+                        <h3>Villa Executive Rooms</h3>
+                        <p>The Villa executive Rooms offer the ultimate flexibility in guest accomodation.</p>
+                            <a href="#" class="btn-card">Read</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-content">
+                    <div class="card-img">
+                        <img src="images/s22.jpg" alt="">
+                    </div>
+                    <div class="card-desc">
+                        <h3>Honeymoon suite</h3>
+                        <p>We take time to pamper the couple</p>
+                            <a href="#" class="btn-card">Read</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
+
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <!-- Bootstrap tooltips -->
