--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	<div class="special">
 		<div class="container">
 			<div class="agileinfo-heading">
-				<h3 id="lobster">Specialities</h3>
+				<h2 id="lobster">Specialities</h2>
 			</div>
 			<div class="special-top-grids">
 				<div class="w3-agile-special">
@@ -313,7 +313,7 @@
 </section>
 <section class="details-card">
     <div class="container">
-      <h3 id="head">Accomodations at Charlie lodge</h3>
+      <h1 id="head">Accomodations at Charlie lodge</h1>
       <p id="para">All our rooms are indulgently comfortable and spacious</p>
         <div class="row">
             <div class="col-md-4">
@@ -355,6 +355,145 @@
         </div>
     </div>
 </section>
+<section class="newsletter">
+<div class="container">
+<div class="row">
+<div class="col-sm-12">
+	<div class="content">
+		<h2>SUBSCRIBE TO OUR NEWSLETTER</h2>
+	<div class="input-group">
+         <input type="email" class="form-control" placeholder="Enter your email">
+         <span class="input-group-btn">
+         <button class="btn" type="submit">Subscribe Now</button>
+         </span>
+          </div>
+	</div>
+</div>
+</div>
+</div>
+</section>
+<div class="container-fluid test">
+    <div class="slider">
+        <div class="slide slide1">
+            <div class="caption">
+              <h3 class="header">Our Testimonials<h3>
+                <h2 id="circle"><i class="fas fa-grin-beam fa-4x"></i></h2>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+        <div class="slide slide2">
+            <div class="caption">
+              <h3 class="header">Our Testimonials</h3>
+                <h2 id="circle"><i class="fas fa-grin-beam fa-4x"></i></h2>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+        <div class="slide slide3">
+            <div class="caption">
+              <h3 class="header">Our Testimonials<h3>
+                <h2 id="circle"><i class="fas fa-grin-beam fa-4x"></i></h2>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+        <div class="slide slide4">
+            <div class="caption">
+              <h3 class="header">Our Testimonials<h3>
+                <h2 id="circle"><i class="fas fa-grin-beam fa-4x"></i></h2>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+        <div class="slide slide1">
+            <div class="caption">
+              <h3 class="header">Our Testimonials</h3>
+                <h2 id="circle"><i class="fas fa-grin-beam fa-4x"></i></h2>
+                <p class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<h1>Our gallery</h1>
+  <div class="container helly">
+    	<div id="carousel">
+			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/1" alt=""></figure>
+			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/2" alt=""></figure>
+			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/3" alt=""></figure>
+			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/4" alt=""></figure>
+			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/5" alt=""></figure>
+			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/6" alt=""></figure>
+			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/7" alt=""></figure>
+			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/8" alt=""></figure>
+			<figure><img class="sas" src="http://lorempixel.com/186/116/people/9" alt=""></figure>
+		</div>
+	</div>
+  <section class="get-in-touch">
+   <h1 class="title">Contact</h1>
+   <form class="contact-form row">
+      <div class="form-field col-lg-6">
+         <input id="name" class="input-text js-input" type="text" required>
+         <label class="label" for="name">Name</label>
+      </div>
+      <div class="form-field col-lg-6 ">
+         <input id="email" class="input-text js-input" type="email" required>
+         <label class="label" for="email">E-mail</label>
+      </div>
+      <div class="form-field col-lg-6 ">
+         <input id="company" class="input-text js-input" type="text" required>
+         <label class="label" for="company">Company Name</label>
+      </div>
+       <div class="form-field col-lg-6 ">
+         <input id="phone" class="input-text js-input" type="text" required>
+         <label class="label" for="phone">Contact Number</label>
+      </div>
+      <div class="form-field col-lg-12">
+         <input id="message" class="input-text js-input" type="text" required>
+         <label class="label" for="message">Message</label>
+      </div>
+      <div class="form-field col-lg-12">
+         <input class="submit-btn" type="submit" value="Submit">
+      </div>
+   </form>
+</section>
+<div class="container bayo">
+	<div class="box">
+		<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+		<div class='details'><h3>Kenya</h3></div>
+	</div>
+
+	<div class="box">
+		<div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+		<div class='details'><h3>+254-711923970</h3></div>
+	</div>
+
+	<div class="box">
+		<div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+		<div class='details'><h3>charlesmburu82@gmail.com</h3></div>
+	</div>
+</div>
 </body>
 
 <!-- JQuery -->
