add gallery, contact us and footer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Document</title>
   <script>
   wow = new WOW(
@@ -90,7 +91,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('images/lodge.jpg')">
+        <div class="carousel-item active" style="background-image: url('images/s25.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h3 class="lead">welcome to charlie lodge.</h3>
           </div>
@@ -439,15 +440,15 @@
 <h1>Our gallery</h1>
   <div class="container helly">
     	<div id="carousel">
-			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/1" alt=""></figure>
-			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/2" alt=""></figure>
-			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/3" alt=""></figure>
-			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/4" alt=""></figure>
-			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/5" alt=""></figure>
-			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/6" alt=""></figure>
-			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/7" alt=""></figure>
-			<figure><img class="sas" src="http://lorempixel.com/186/116/nature/8" alt=""></figure>
-			<figure><img class="sas" src="http://lorempixel.com/186/116/people/9" alt=""></figure>
+        <figure><img src="http://lorempixel.com/186/116/nature/1" alt=""></figure>
+  			<figure><img src="http://lorempixel.com/186/116/nature/2" alt=""></figure>
+  			<figure><img src="http://lorempixel.com/186/116/nature/3" alt=""></figure>
+  			<figure><img src="http://lorempixel.com/186/116/nature/4" alt=""></figure>
+  			<figure><img src="http://lorempixel.com/186/116/nature/5" alt=""></figure>
+  			<figure><img src="http://lorempixel.com/186/116/nature/6" alt=""></figure>
+  			<figure><img src="http://lorempixel.com/186/116/nature/7" alt=""></figure>
+  			<figure><img src="http://lorempixel.com/186/116/nature/8" alt=""></figure>
+  			<figure><img src="http://lorempixel.com/186/116/people/9" alt=""></figure>
 		</div>
 	</div>
   <section class="get-in-touch">
@@ -478,24 +479,139 @@
       </div>
    </form>
 </section>
-<div class="container bayo">
-	<div class="box">
-		<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-		<div class='details'><h3>Kenya</h3></div>
-	</div>
+<footer class="footer">
+    <div class="main-footer" data-pg-collapsed>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-3">
+                    <div class="widget w-footer widget_black_studio_tinymce">
+                        <h6 class="widget-title"><span class="light">About</span> Us</h6>
+                        <div class="textwidget">The charlie lodge is situated along Nairobi Nakuru highway with spectacular views of Lake Nakuru and Lake Elementaita, this quiet lodge in Nakuru kenya will have you relaxed and rested in no time. Offering luxury accomodation for both local and international guests, the charlie lodge has become a home away for many discerning guests.
 
-	<div class="box">
-		<div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
-		<div class='details'><h3>+254-711923970</h3></div>
-	</div>
 
-	<div class="box">
-		<div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
-		<div class='details'><h3>charlesmburu82@gmail.com</h3></div>
-	</div>
-</div>
+                          <div class="col-xs-12 appoint">
+                            <a href="#" class="btn btn-primary" target="_blank">Make An Appointment Now</a>
+                          </div>
+
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-3">
+                    <div class="widget w-footer widget_nav_menu">
+                        <h6 class="widget-title"><span class="light">Extra</span> Navigation</h6>
+                        <div class="menu-footer-menu-container">
+                            <ul id="menu-footer-menu" class="menu">
+                                <li id="menu-item-6694" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6694">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/shortcodes/">Shortcodes</a>
+                                </li>
+                                <li id="menu-item-6696" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-6696">
+                                    <a href="http://www.qreativethemes.com/docs/thelandscaper">Documentation</a>
+                                </li>
+                                <li id="menu-item-6692" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6692">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/make-an-appointment/">Make an Appointment</a>
+                                </li>
+                                <li id="menu-item-6695" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6695">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/case-study/">Case Study</a>
+                                </li>
+                                <li id="menu-item-6691" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6691">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/frequently-asked-questions/">Frequently Asked Questions</a>
+                                </li>
+                                <li id="menu-item-6693" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6693">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/prices-and-delivery/">Prices & Delivery</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-3">
+                    <div class="widget w-footer widget_nav_menu">
+                        <h6 class="widget-title"><span class="light">Our</span> Services</h6>
+                        <div class="menu-services-menu-container">
+                            <ul id="menu-services-menu" class="menu">
+                                <li id="menu-item-6684" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6684">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/services/">See all Services</a>
+                                </li>
+                                <li id="menu-item-6685" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6685">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/services/irrigation-and-drainage/">Irrigation & Drainage</a>
+                                </li>
+                                <li id="menu-item-6686" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6686">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/services/lawn-and-garden-care/">Lawn & Garden Care</a>
+                                </li>
+                                <li id="menu-item-6687" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6687">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/services/planting-and-removal/">Planting & Removal</a>
+                                </li>
+                                <li id="menu-item-6688" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6688">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/services/snow-and-ice-removal/">Snow & Ice Removal</a>
+                                </li>
+                                <li id="menu-item-6689" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6689">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/services/spring-and-fall-cleanup/">Spring & Fall Cleanup</a>
+                                </li>
+                                <li id="menu-item-6690" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-6690">
+                                    <a href="https://demos.qreativethemes.com/thelandscaper/services/stone-and-hardscaping/">Stone & Hardscaping</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-3">
+                    <div class="widget w-footer widget-opening-hours">
+                        <h6 class="widget-title"><span class="light">Working</span> Hours</h6>
+                        <div class="opening-times">
+                            <ul>
+                                <li class="weekday">Monday
+                                    <span class="right">8:00am-5:00pm</span>
+                                </li>
+                                <li class="weekday">Tuesday
+                                    <span class="right">8:00am-5:00pm</span>
+                                </li>
+                                <li class="weekday">Wednesday
+                                    <span class="right">8:00am-5:00pm</span>
+                                </li>
+                                <li class="weekday">Thursday
+                                    <span class="right">8:00am-5:00pm</span>
+                                </li>
+                                <li class="weekday">Friday
+                                    <span class="right">8:00am-5:00pm</span>
+                                </li>
+                                <li class="weekday">Saturday
+                                    <span class="right">8:00am-5:00pm</span>
+                                </li>
+                                <li class="weekday today">Sunday
+                                    <span class="right label">CLOSED</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bottom-footer" data-pg-collapsed>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-4">
+                    <div class="bottom-left">
+                        <p>© 2019 all rights reserved</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4">
+                    <div class="bottom-middle">
+                        <p><a href="http://facebook.com/qreativethemes" target="_blank"><i class="fas fa-facebook-square"></i></a><a href="http://twitter.com/qreativethemes" target="_blank"><i class="fas fa-twitter-square"></i></a><a href="https://demos.qreativethemes.com/thelandscaper/#"><i class="fas fa-linkedin-square"></i></a><a href="https://demos.qreativethemes.com/thelandscaper/#"><i class="fa fa-youtube-square"></i></a></p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4">
+                    <div class="bottom-right">
+                        <p>For emergency tree removal <i class="fas fa-phone"></i> +254-711-923-970</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</footer>
 </body>
-
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <!-- Bootstrap tooltips -->
