add html and style it with css

--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link text-dark links" href="index.html">Home
+      <ul class="navbar-nav mr-auto format">
+        <li class="nav-item active format">
+          <a class="nav-link text-dark links format" href="index.html">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark links" href="about.html">About Us</a>
+          <a class="nav-link text-dark links" href="#about">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark links" href="contacts.html">Gallery</a>
+          <a class="nav-link text-dark links" href="#boza">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark links" href="contacts.html">Contact</a>
+          <a class="nav-link text-dark links" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
@@ -434,7 +434,7 @@
   			<figure><img src="http://lorempixel.com/186/116/people/9" alt=""></figure>
 		</div>
 	</div>
-  <section class="get-in-touch">
+  <section class="get-in-touch"id ="contact">
    <h1 class="title">Contact</h1>
    <form class="contact-form row">
       <div class="form-field col-lg-6">
@@ -462,75 +462,110 @@
       </div>
    </form>
 </section>
-<footer>
-    <div class="footerHeader" ></div>
-    <div class="container row">
-		<div class="col-md-4" >
-		    <h3>About us</h3>
-		    <p>
-		        The charlie lodge is situated along Nairobi Nakuru highway with spectacular views of Lake Nakuru and Lake Elementaita, this quiet lodge in Nakuru kenya will have you relaxed and rested in no time. Offering luxury accomodation for both local and international guests, the charlie lodge has become a home away for many discerning guests.
-		    </p>
-		</div>
-    <div class ="linkup">
-		<div class="col-md-4">
-		    <h3>GENERAL LINKS </h3>
-		    <p id="links">Home</p>
-        <p id="links">About Us</p>
-        <p id="links">Gallery</p>
-        <p id="links">Contact</p>
-		</div>
-		<div class="col-md-4" >
-		    <h3>SOCIAL LINKS</h3>
-		    <ul>
-		        <li><i class="fab fa-facebook"></i></li>
-		        <li><i class="fab fa-instagram"></i></li>
-		        <li><i class="fab fa-twitter"></i></li>
-            <li><i class="fab fa-linkedin"></i>
-		    </ul>
-		</div>
-    </div>
-  </div>
-</footer>
 <!-- Footer -->
-<footer class="page-footer font-small special-color-dark pt-4">
+<footer class="page-footer font-small indigo">
 
-    <!-- Footer Elements -->
-    <div class="container">
+    <!-- Footer Links -->
+    <div class="container joy">
 
-      <!--Grid row-->
-      <div class="row">
+      <!-- Grid row-->
+      <div class="row text-center d-flex justify-content-center pt-5 mb-3">
 
-        <!--Grid column-->
-        <div class="col-md-6 mb-4">
-
-          <!-- Form -->
-          <form class="form-inline">
-            <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search">
-            <i class="fas fa-search" aria-hidden="true"></i>
-          </form>
-          <!-- Form -->
-
+        <!-- Grid column -->
+        <div class="col-md-3 mb-3">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="index.html">HOME</a>
+          </h6>
         </div>
-        <!--Grid column-->
+        <!-- Grid column -->
 
-        <!--Grid column-->
-        <div class="col-md-6 mb-4">
-
-          <form class="input-group">
-            <input type="text" class="form-control form-control-sm" placeholder="Your email" aria-label="Your email" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-sm btn-outline-white my-0" type="button">Sign up</button>
-            </div>
-          </form>
-
+        <!-- Grid column -->
+        <div class="col-md-3 mb-3">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="#boza">GALLERY</a>
+          </h6>
         </div>
-        <!--Grid column-->
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 mb-3">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="#about">ABOUT US</a>
+          </h6>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 mb-3">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="#contact">CONTACT</a>
+          </h6>
+        </div>
+        <!-- Grid column -->
 
       </div>
-      <!--Grid row-->
+      <!-- Grid row-->
+      <hr class="rgba-white-light" style="margin: 0 15%;">
+
+      <!-- Grid row-->
+      <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+
+        <!-- Grid column -->
+        <div class="col-md-8 col-12 mt-5 centerit">
+          <h4 span class ="bruh"id ="about">ABOUT CHARLIE RESTAURANT</h4>
+          <p style="line-height: 1.7rem">
+   		        The charlie lodge is situated along Nairobi Nakuru highway with spectacular views of Lake Nakuru and Lake Elementaita, this quiet lodge in Nakuru kenya will have you relaxed and rested in no time. Offering luxury accomodation for both local and international guests, the charlie lodge has become a home away for many discerning guests.
+   		    </p>
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row-->
+      <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+
+      <!-- Grid row-->
+      <div class="row pb-3">
+
+        <!-- Grid column -->
+        <div class="col-md-12">
+
+          <div class="mb-5 flex-center">
+
+            <!-- Facebook -->
+            <a class="fb-ic" href="https://web.facebook.com/mburu.charles.10">
+              <i class="fab fa-facebook-f fa-lg white-text mr-4"> </i>
+            </a>
+            <!-- Twitter -->
+            <a class="tw-ic">
+              <i class="fab fa-twitter fa-lg white-text mr-4"> </i>
+            </a>
+            <!-- Google +-->
+            <a class="gplus-ic">
+              <i class="fab fa-google-plus-g fa-lg white-text mr-4"> </i>
+            </a>
+            <!--Linkedin -->
+            <a class="li-ic">
+              <i class="fab fa-linkedin-in fa-lg white-text mr-4"> </i>
+            </a>
+            <!--Instagram-->
+            <a class="ins-ic" href ="https://www.instagram.com/srcharl/">
+              <i class="fab fa-instagram fa-lg white-text mr-4"> </i>
+            </a>
+            <!--Pinterest-->
+            <a class="pin-ic" href="https://www.pinterest.com/">
+              <i class="fab fa-pinterest fa-lg white-text"> </i>
+            </a>
+
+          </div>
+
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row-->
 
     </div>
-    <!-- Footer Elements -->
+    <!-- Footer Links -->
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright: All rights reserved
@@ -538,7 +573,11 @@
     <!-- Copyright -->
 
   </footer>
+  <!-- Footer -->
 </body>
+<script>
+  AOS.init();
+</script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
