add style.css and index.html

--- a/index.html
+++ b/index.html
@@ -423,15 +423,15 @@
 <h1 id ="boza">Our gallery</h1>
   <div class="container helly">
     	<div id="carousel">
-        <figure><img src="http://lorempixel.com/186/116/nature/1" alt=""></figure>
-        <figure><img src="http://lorempixel.com/186/116/nature/2" alt=""></figure>
-  			<figure><img src="http://lorempixel.com/186/116/nature/3" alt=""></figure>
-  			<figure><img src="http://lorempixel.com/186/116/nature/4" alt=""></figure>
-  			<figure><img src="http://lorempixel.com/186/116/nature/5" alt=""></figure>
-  			<figure><img src="http://lorempixel.com/186/116/nature/6" alt=""></figure>
-  			<figure><img src="http://lorempixel.com/186/116/nature/7" alt=""></figure>
-  			<figure><img src="http://lorempixel.com/186/116/nature/8" alt=""></figure>
-  			<figure><img src="http://lorempixel.com/186/116/people/9" alt=""></figure>
+        <figure><img src="images/s32.jpg" alt=""></figure>
+        <figure><img src="images/s28.jpg" alt=""></figure>
+  			<figure><img src="images/s27.jpg" alt=""></figure>
+  			<figure><img src="images/s31.jpg" alt=""></figure>
+  			<figure><img src="images/s33.jpg" alt=""></figure>
+  			<figure><img src="images/s24.jpg" alt=""></figure>
+  			<figure><img src="images/s15.jpg" alt=""></figure>
+  			<figure><img src="images/s20.jpg" alt=""></figure>
+  			<figure><img src="images/s23.jpg" alt=""></figure>
 		</div>
 	</div>
   <section class="get-in-touch"id ="contact">
